<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_text_view_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/day"
        android:gravity="center"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_from_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/id_text_view_from_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/from_time"
        android:textColor="@color/grey"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/id_text_view_day"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_to"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_text_view_day"
        app:layout_constraintTop_toTopOf="@+id/id_text_view_day" />

    <TextView
        android:id="@+id/id_text_view_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/to"
        android:textColor="@color/grey"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/id_text_view_from_time"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_to_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_text_view_from_time"
        app:layout_constraintTop_toTopOf="@+id/id_text_view_from_time" />

    <TextView
        android:id="@+id/id_text_view_to_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/to_time"
        android:textColor="@color/grey"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/id_text_view_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_text_view_to"
        app:layout_constraintTop_toTopOf="@+id/id_text_view_to" />


</androidx.constraintlayout.widget.ConstraintLayout>