<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/id_image_view_hospital_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/id_text_view_hospital_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/id_text_view_hospital_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/athiti"
        android:text="@string/hospital_name"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_image_view_location_icon"
        app:layout_constraintEnd_toStartOf="@+id/id_image_view_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_image_view_hospital_image" />

    <ImageView
        android:id="@+id/id_image_view_rating"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/id_text_view_hospital_name"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_text_view_hospital_name"
        app:layout_constraintTop_toTopOf="@+id/id_text_view_hospital_name" />

    <ImageView
        android:id="@+id/id_image_view_time_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toBottomOf="@+id/id_text_view_location_name"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_hours_available"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_text_view_location_name"
        app:layout_constraintTop_toTopOf="@+id/id_text_view_location_name" />

    <TextView
        android:id="@+id/id_text_view_location_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/location"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/id_image_view_location_icon"
        app:layout_constraintEnd_toStartOf="@+id/id_image_view_time_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_image_view_location_icon"
        app:layout_constraintTop_toTopOf="@+id/id_image_view_location_icon" />

    <TextView
        android:id="@+id/id_text_view_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/athiti"
        android:text="@string/_4_5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/id_image_view_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_image_view_rating"
        app:layout_constraintTop_toTopOf="@+id/id_image_view_rating" />

    <ImageView
        android:id="@+id/id_image_view_location_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toTopOf="@+id/id_text_view_services"
        app:layout_constraintEnd_toStartOf="@+id/id_text_view_location_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_text_view_hospital_name" />

    <TextView
        android:id="@+id/id_text_view_hours_available"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/athiti"
        android:text="@string/open_24_hours"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/id_image_view_time_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_image_view_time_icon"
        app:layout_constraintTop_toTopOf="@+id/id_image_view_time_icon" />

    <TextView
        android:id="@+id/id_text_view_services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/athiti"
        android:text="@string/services"
        android:textColor="@color/lite_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id_recycler_view_services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_image_view_location_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/id_recycler_view_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_button_view_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_text_view_services" />

    <Button
        android:id="@+id/id_button_view_more"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lite_purple"
        android:fontFamily="@font/athiti"
        android:text="@string/view_more"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_recycler_view_services" />

</androidx.constraintlayout.widget.ConstraintLayout>